		Fixed spies staying on the minimap after infiltration.
		Added maps: Blitzkrieg and Burlesca by s1w.
		Added map: Seaside 2 by hamb.
		Both Allied and Soviet factions now build general-purpose mines instead of AT and AP mines respectively.
		Added new attack-move cursor artwork.
		Added Phase Transport, an Allied high-tech infantry transport which can cloak.
		Attack Dogs, Snipers, Mobile Radar Jammers, Camo Pillboxes, Phase Transports, Radar Domes, and Spy Planes can now detect cloaked units.
		Removed the submarine detection ability from Cruiser and Transport.
		Added the submarine detection ability to Submarines and Missile Subs.
		Increased the submarine detection range of Gunboat from 3 to 4.
		Fixed Spies having an enemy color health bar when disguised as a friendly unit (occurred using the Team Health Colors setting).
		Chrono Tanks can now be teleported in groups by holding SHIFT or ALT and issuing a move order.
		Increased the maximum teleport distance in cells for Chrono Tank from 10 to 12.
		Decreased the teleport cooldown in seconds for Chrono Tank from 30 to 20.
		Added Minibibs for bibless buildings.
	Tiberian Dawn:
		Chinook rotors now counter-rotate.
		Commando can now plant C4 on bridges.
		Added the Asset Browser to the Extras menu.
		Removed health bars and selection boxes from walls.
		Changed Nod Obelisk HP to 600 from 400, same as Advanced Guard Tower
		Fixed dinosaurs not being able to collect crates.
		A10 air strike will only reveal the target area.
		Reduced Guard Tower range from 6 to 5.
		Reduced Guard Tower vision from 7 to 6.
		Increased Guard Tower build time from 12 seconds to 24 seconds.
		Reduced Gun Turret range from 6 to 5
		Reduced Gun Turret vision from 7 to 6.
		Increased Gun Turret build time from 15 seconds to 30 seconds.
		Reduced SAM Site range from 10 to 7.
		Increased Sam Site build time from 18 seconds to 36 seconds.
		Reduced Advanced Guard Tower range from 8 to 6.
		Reduced Advanced Guard Tower vision from 9 to 7.